2002-10-24  Alexander Larsson  <alexl@redhat.com>

	* components/Makefile.am:
	* components/image_properties/.cvsignore:
	* components/image_properties/Makefile.am:
	* components/image_properties/Nautilus_View_image_properties.server.in.in:
	* components/image_properties/libmain.c: 
	* components/image_properties/nautilus-image-properties-view.[ch]:
	* configure.in:

	Implement image properties page
	
	Patch from James Willcox  <jwillcox@gnome.org>
	
	* libnautilus-private/nautilus-mime-actions.[ch]:
	Add nautilus_mime_get_all_components_for_file_extended
	
	* src/file-manager/fm-properties-window.c:
	Plug-in property pages.

2002-10-24 Stephen Browne <stephen.browne@sun.com>

	* libnautilus-private/nautilus-file-operations.c:
	(nautilus_file_operations_copy_move): 

	filter out invalid URIs

2002-10-23  James Willcox  <jwillcox@gnome.org>

	* components/emblem/nautilus-emblem-view.c:
	(emblem_widget_sort_func), (nautilus_emblem_view_populate):
	
	Correctly sort the emblems

2002-10-21  James Willcox  <jwillcox@gnome.org>

	* components/emblem/nautilus-emblem-view.c:
	(nautilus_emblem_view_button_press_cb),
	(nautilus_emblem_view_delete_cb), (rename_dialog_response_cb),
	(create_rename_emblem_dialog), (nautilus_emblem_view_rename_cb),
	(create_emblem_widget_with_pixbuf), (create_add_emblems_dialog),
	(nautilus_emblem_view_drag_received_cb):
	* libnautilus-private/nautilus-emblem-utils.c:
	(nautilus_emblem_can_remove_emblem),
	(nautilus_emblem_can_rename_emblem),
	(nautilus_emblem_remove_emblem), (nautilus_emblem_rename_emblem):
	* libnautilus-private/nautilus-emblem-utils.h:
	* libnautilus-private/nautilus-icon-factory.c:
	(nautilus_icon_factory_remove_from_cache):
	* libnautilus-private/nautilus-icon-factory.h:
	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_destroy):

	Add a popup menu to the emblems in the emblem sidebar that allows
	renaming and removing of emblems.

2002-10-21  Alexander Larsson  <alexl@redhat.com>
