@@ -1,3 +1,8 @@
+2002-10-24  Dennis M. Cranston  <dennis_cranston@yahoo.com>
+
+	* src/file-manager/fm-properties-window.[ch]:
+	Properties dialog fixes for #95836. 
+
 2002-10-24  Alexander Larsson  <alexl@redhat.com>
 
 	* components/Makefile.am:
